--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<div>
 		<h3>My projects</h3>
-		<ul><li><a href="">Underscore Translate</a></li></ul>
+		<ul><li><a href="underscore/underscore.html">Underscore Translate</a></li></ul>
 	</div>
 
 	<footer></footer>
