--- a/underscore/underscore.html
+++ b/underscore/underscore.html
@@ -74,48 +74,32 @@
     <h1>Underscore.js</h1> 
  
     <p> 
-      <a href="http://github.com/documentcloud/underscore/">Underscore</a> is a
-      utility-belt library for JavaScript that provides a lot of the
-      functional programming support that you would expect in
-      <a href="http://prototypejs.org/api">Prototype.js</a> 
-      (or <a href="http://www.ruby-doc.org/core/classes/Enumerable.html">Ruby</a>),
-      but without extending any of the built-in JavaScript objects. It's the
-      tie to go along with <a href="http://docs.jquery.com">jQuery</a>'s tux.
+    	<a href="http://github.com/documentcloud/underscore/">Underscore</a>一个非常实用的JavaScript库，提供许多编程功能的支持，就像你期望 <a href="http://prototypejs.org/api">Prototype.js</a>(或者<a href="http://www.ruby-doc.org/core/classes/Enumerable.html">Ruby</a>)有这些功能且不扩展任何JavaScript的原生对象。It's the tie to go along with <a href="http://docs.jquery.com">jQuery</a>'s tux(翻译有点难度，征集此句翻译)。 
     </p> 
  
     <p> 
-      Underscore provides 60-odd functions that support both the usual
-      functional suspects: <b>map</b>, <b>select</b>, <b>invoke</b> &mdash;
-      as well as more specialized helpers: function binding, javascript
-      templating, deep equality testing, and so on. It delegates to built-in
-      functions, if present, so modern browsers will use the
-      native implementations of <b>forEach</b>, <b>map</b>, <b>reduce</b>,
-      <b>filter</b>, <b>every</b>, <b>some</b> and <b>indexOf</b>.
+		Underscore提供60多个方法，即有普通的功能，例如<b>map</b>, <b>select</b>, <b>invoke</b>，也有更多特殊的编程辅助方法，例如：函数绑定、javascript模板、绝对相等判断等待。
+		如果一些现代的浏览器提供了内置的<b>forEach</b>, <b>map</b>, <b>reduce</b>,
+      <b>filter</b>, <b>every</b>, <b>some</b> 和 <b>indexOf</b>方法，Underscore就委托给浏览器原生的方法。
     </p> 
  
     <p> 
-      A complete <a href="test/test.html">Test &amp; Benchmark Suite</a> 
-      is included for your perusal.
+	Underscore提供完整的<a href="http://documentcloud.github.com/underscore/test/test.html">测试用例集</a>供你精读。
     </p> 
     
     <p> 
-      You may also read through the <a href="docs/underscore.html">annotated source code</a>.
+		你也可以阅读有注释的<a href="http://documentcloud.github.com/underscore/docs/underscore.html">源代码</a>。
     </p> 
  
     <p> 
-      The project is
-      <a href="http://github.com/documentcloud/underscore/">hosted on GitHub</a>.
-      You can report bugs and discuss features on the
-      <a href="http://github.com/documentcloud/underscore/issues">issues page</a>,
-      on Freenode in the <tt>#documentcloud</tt> channel,
-      or send tweets to <a href="http://twitter.com/documentcloud">@documentcloud</a>.
+	项目代码放在<a href="http://github.com/documentcloud/underscore/">GitHub</a>上，你可以通过<a href="http://github.com/documentcloud/underscore/issues">issues页</a>、Freenode的<tt>#documentcloud</tt>频道、发送tweets给<a href="http://twitter.com/documentcloud">@documentcloud</a>三个途径报告bug以及参与特性讨论。
     </p> 
  
     <p> 
-      <i>Underscore is an open-source component of <a href="http://documentcloud.org/">DocumentCloud</a>.</i> 
+      <i>Underscore是<a href="http://documentcloud.org/">DocumentCloud</a>的一个开源组件。</i> 
     </p> 
  
-    <h2>Downloads <i style="padding-left: 12px; font-size:12px;">(Right-click, and use "Save As")</i></h2> 
+    <h2>下载 <i style="padding-left: 12px; font-size:12px;">(Right-click, and use "Save As")</i></h2> 
  
     <table> 
       <tr> 
@@ -128,7 +112,7 @@
       </tr> 
     </table> 
  
-    <h2>Table of Contents</h2> 
+    <h2>内容目录</h2> 
     
     <a href="#styles">Object-Oriented and Functional Styles</a> 
  
@@ -157,7 +141,7 @@
     </p> 
  
     <p> 
-      <b>Functions</b> 
+      <b>Functions(已完成翻译)</b> 
       <br /> 
       <span class="methods"><a href="#bind">bind</a>, <a href="#bindAll">bindAll</a>, 
       <a href="#memoize">memoize</a>, <a href="#delay">delay</a>, <a href="#defer">defer</a>, 
