--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
 	<div>
 		<h3>My projects</h3>
-		<ul><li><a href="underscore/underscore.html">Underscore Translate</a></li></ul>
+		<ul>
+			<li><a href="underscore/underscore.html">Underscore Translate</a></li>
+			<li><a href="ie6fixed/index.html">ie6fixed</a></li>
+		</ul>
 	</div>
 
 	<footer></footer>
