--- a/ie6fixed/demo-common.html
+++ b/ie6fixed/demo-common.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>IE6 Fixed</title>
-	<link rel="stylesheet" href="../assets/style.css"/> 
+	<link rel="stylesheet" href="assets/style.css"/> 
 	<script src="http://js.jrjimg.cn/lib/jquery-1.4.4.min.js"></script>
 	<script src="ie6fixed-common.js"></script>
 </head>
