--- a/ie6fixed/demo-seajs.html
+++ b/ie6fixed/demo-seajs.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="gbk">
 	<title>IE6 Fixed</title>
-	<link rel="stylesheet" href="../assets/style.css"/> 
+	<link rel="stylesheet" href="assets/style.css"/> 
 	<script src="assets/sea.js"></script>
 </head>
 <body>
