--- a/ie6fixed/index.html
+++ b/ie6fixed/index.html
@@ -25,6 +25,12 @@
 			<li>@param {jquery object} <b>obj</b> 需要fixed定位的元素</li>
 			<li>@param {string / function} <b>position</b> 定位方式，<b>position</b>可以是cc lt rt lb rb字符串，也可以是自定义的定位函数<br/>cc:页面居中定位，lt:左上角定位，rt:右上角定位，lb:左下角定位，rb:右下角定位 </li>
 		</ul>
+
+		<h3>DEMO</h3>
+		<ul>
+			<li><a href="demo-common.html" target="_blank">common version</a></li>
+			<li><a href="demo-seajs.html" target="_blank">seajs module version</a></li>
+		</ul>
 	</div>
 
 	<footer></footer>
