--- a/ie6fixed/demo-seajs.html
+++ b/ie6fixed/demo-seajs.html
@@ -15,7 +15,7 @@
 
 	<div class="box"></div>
 	<script>
-		seajs.use(["./ie6Fixed", "./assets/jquery"], function(ie6Fixed, $){
+		seajs.use(["./ie6fixed", "./assets/jquery"], function(ie6Fixed, $){
 			ie6Fixed.fixed($(".cc-box"), "cc");
 			ie6Fixed.fixed($(".lt-box"), "lt");
 			ie6Fixed.fixed($(".rt-box"), "rt");
